# portafolio

./: README.md  pyproject.toml
.cursor/: chatgpt_balanceo.md  cursor_debugging_test_module_import_err.md  cursor_find_api_for_current_stock_price.md
src/: main.py
src/models/: portafolio.py  stock.py
src/utils/: constants.py  price_fetcher.py
tests/: conftest.py
tests/models/: portafolio_test.py  stock_test.py
tests/utils/: price_fetcher_test.py
