[project]
name = "portafolio"
version = "0.1.0"
description = ""
authors = [
    {name = "Tomas Gunther",email = "tomasgunther@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "requests>=2.31.0",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
pytest = "^8.4.2"
pytest-mock = "^3.14.0"
black = "^25.9.0"

[tool.pytest.ini_options]
pythonpath = ["."]

